fixed dark mode not working

--- a/styles.css
+++ b/styles.css
@@ -348,3 +348,7 @@ body {
 .hidden{
   display: none;
 }
+
+.tile-dark{
+  --text-white:#f7ffff
+}
